--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,10 @@ ul, ol {
 }
 /* TEAM */
 
+.section-team {
+    background: #F5F4FA;
+}
+
 .team-title,
 .clients-title {
     font-weight: 700;
@@ -257,6 +261,7 @@ ul, ol {
 .team-card {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    background: #FFFFFF;
 }
 
 .team-image {
